[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Enemies/EnemyShoot/EnemyShoot.gd" type="Script" id=1]
[ext_resource path="res://Objects/Enemies/EnemyShoot/StateFire.gd" type="Script" id=2]
[ext_resource path="res://Objects/Enemies/EnemyShoot/StateFollow.gd" type="Script" id=3]
[ext_resource path="res://Objects/Enemies/EnemyShoot/StateAim.gd" type="Script" id=4]
[ext_resource path="res://Objects/Enemies/Enemy_02.png" type="Texture" id=5]
[ext_resource path="res://Objects/Enemies/EnemyShoot/StateReload.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="EnemyShoot" type="Area2D"]
pause_mode = 1
script = ExtResource( 1 )
acceleration = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 4
collide_with_areas = true

[node name="GlobalTree" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="GlobalTree"]
default_color = Color( 1, 0, 0, 0.470588 )

[node name="StateFollow" type="Node" parent="."]
script = ExtResource( 3 )

[node name="StateAim" type="Node" parent="."]
script = ExtResource( 4 )

[node name="StateFire" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StateReload" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]
